--- a/public/style.css
+++ b/public/style.css
@@ -374,20 +374,24 @@ h1 {
 /* Countdown tot volgende voorstelling */
 
 .aankomend {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
-    padding: 2rem;
     background-color: var(--secondary-color);
     color: var(--secondary-foreground-color);
+    background-position: center;
+    background-size: cover;
+    background-attachment: scroll;
 }
 
 .aankomend h1 {
     font-size: 2rem;
     line-height: 2.5rem;
     margin-bottom: .5rem;
+    text-shadow: #000 0px 0px 10px;
 }
 
 .countdown {
@@ -402,6 +406,12 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    padding: 2rem;
+    backdrop-filter: blur(5px) brightness(0.5);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .countdown-item {
@@ -414,11 +424,36 @@ h1 {
 .countdown-item span {
     font-size: 2rem;
     font-weight: 600;
+    text-shadow: #000 0px 0px 10px;
 }
 
 .countdown-item p {
     font-size: 1rem;
     font-weight: 400;
+    text-shadow: #000 0px 0px 10px;
+}
+
+.changed {
+    animation: changeNumber .1s forwards;
+}
+
+@keyframes changeNumber {
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    50% {
+        transform: translateY(-20px);
+        opacity: 0;
+    }
+    51% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 /* Fotogallerij */
@@ -750,7 +785,7 @@ h1 {
     border: none;
     border-radius: 5px;
     text-decoration: none;
-    transition: background-color 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
     font-size: 1rem;
     line-height: 1.5rem;
 }
@@ -785,6 +820,38 @@ h1 {
 
 .blue-button:hover {
     background-color: #1565c0;
+}
+
+.pulsing-button {
+    animation: pulse 3s infinite;
+    background-color: #000;
+    color: #fff;
+}
+
+.pulsing-button:hover {
+    background-color: gold;
+    color: #000;
+}
+
+.pulsing-button-container {
+    margin-top: 1rem;
+}
+
+@keyframes pulse {
+    0% {
+        border: 1px solid #000;
+        box-shadow: none;
+    }
+
+    50% {
+        border: 1px solid gold;
+        box-shadow: 0 0 10px gold;
+    }
+
+    100% {
+        border: 1px solid #000;
+        box-shadow: none;
+    }
 }
 
 .post-form {
