feat(Admin): add log out button

--- a/public/style.css
+++ b/public/style.css
@@ -160,6 +160,23 @@ h1 {
     color: var(--accent-color);
 }
 
+.logout-button {
+    background-color: rgb(255, 89, 89); 
+    color: white; 
+    padding: 10px 15px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    text-decoration: none; 
+    font-size: 1em; 
+    transition: background-color 0.3s; 
+}
+
+.logout-button:hover {
+    background-color: darkred; /* Donkerrode achtergrond bij hover */
+}
+
+
 /* Hero (Welkom + intro + foto) */
 
 .hero {
@@ -1233,7 +1250,7 @@ strong {
 
 .intro {
     text-align: center;
-    padding: 30px 0 30px 0;
+    padding: 30px 0;
     width: 100%;
     background-color: lightgrey;
 }
