--- a/public/style.css
+++ b/public/style.css
@@ -65,6 +65,10 @@ body {
     min-height: 100svh;
 }
 
+body#home {
+    background: var(--tertiary-color);
+}
+
 .cursive {
     font-family: 'Dancing Script', 'Arial', sans-serif;
 }
@@ -108,6 +112,13 @@ nav {
     align-items: center;
     gap: 1rem;
     flex-direction: row;
+    text-decoration: none;
+    color: #fff;
+}
+
+.brand-link {
+    text-decoration: none;
+    color: #fff;
 }
 
 .brandtext {
@@ -117,6 +128,8 @@ nav {
     font-size: 1.4rem;
     line-height: 1.5rem;
     font-weight: bold;
+    text-decoration: none;
+    color: #fff;
 }
 
 .brand img {
@@ -213,6 +226,8 @@ nav {
     text-decoration: none;
     transition: background-color 0.3s ease-in-out;
     text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
 }
 
 .links a:hover {
@@ -228,8 +243,8 @@ nav {
 }
 
 .link-category h2 {
-    font-size: 1.5rem;
-    line-height: 2rem;
+    font-size: 2rem;
+    line-height: 2.5rem;
     margin-bottom: .5rem;
     color: gold;
     text-align: center;
