--- a/public/style.css
+++ b/public/style.css
@@ -471,7 +471,7 @@ h1 {
     }
 }
 
-/* Fotogallerij */
+/* Fotogalerij */
 
 .photo-form {
     padding: 20px;
@@ -1171,6 +1171,8 @@ textarea {
 
 }
 
+
+
 .historie-item {
     display: flex;
     justify-content: center;
@@ -1469,6 +1471,27 @@ div.fc-event-main {
 
 strong {
     font-weight: bold;
+}
+
+.intro {
+    text-align: center;
+    padding: 30px 0;
+    width: 100%;
+    background-color: lightgrey;
+}
+
+.intro h1 {
+    font-weight: bold;
+    margin-top: 0;
+    color: black;
+}
+
+.intro p {
+    max-width: 30%;
+    margin-left: auto; 
+    margin-right: auto; 
+    word-wrap: break-word;
+    color: black;
 }
 
 /* Media Queries */
