--- a/public/style.css
+++ b/public/style.css
@@ -1478,20 +1478,25 @@ strong {
     padding: 30px 0;
     width: 100%;
     background-color: lightgrey;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: lightgrey;
+    color: black;
 }
 
 .intro h1 {
     font-weight: bold;
     margin-top: 0;
-    color: black;
+    color: inherit;
 }
 
 .intro p {
     max-width: 30%;
-    margin-left: auto; 
-    margin-right: auto; 
+    margin-left: auto;
+    margin-right: auto;
     word-wrap: break-word;
-    color: black;
+    color: inherit;
 }
 
 /* Media Queries */
