--- a/public/style.css
+++ b/public/style.css
@@ -1601,13 +1601,22 @@ strong {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: lightblue; /* dark grey */
-    background-color: white;
+    background-color: var(--secondary-color);
+    color: white;
     border: 2px solid black;
     border-radius: 35px;
     width: 600px;
     margin: 0 auto; /* center the form */
     padding: 20px;
+}
+
+.donationdiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh;
+    padding: 0;
+    margin: 0;
 }
 
 
