--- a/public/style.css
+++ b/public/style.css
@@ -970,7 +970,7 @@ textarea {
     padding: 2rem;
     background-color: var(--secondary-color);
     color: var(--secondary-foreground-color);
-    border-radius: 5px;
+    border-radius: 35px;
     box-shadow: #1d1d1b 0px 0px 10px;
     min-width: 500px;
 }
@@ -1599,24 +1599,37 @@ strong {
 .donation-form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     background-color: var(--secondary-color);
-    color: white;
+    color: var(--secondary-foreground-color);
     border: 2px solid black;
     border-radius: 35px;
     width: 600px;
     margin: 0 auto; /* center the form */
     padding: 20px;
+    max-width: 500px;
+}
+
+.donation-form button {
+    background-color: white;
+    color: var(--secondary-color);
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .donationdiv {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
     min-height: 80vh;
     padding: 0;
-    margin: 0;
+    margin-top: 30px;
 }
 
 
