--- a/public/style.css
+++ b/public/style.css
@@ -155,6 +155,14 @@ nav {
     background-color: var(--accent-color);
 }
 
+.location iframe {
+    border: none;
+    border-radius: 5px;
+    width: 1000px;
+    max-width: 1200px;
+    height: 800px;
+}
+
 /* Verstop navigatielinks offscreen, wanneer data-visible = true, toon hem vanaf de linkerkant, onder de H1 in de navbar */
 .links {
     position: absolute;
@@ -1530,6 +1538,10 @@ strong {
         flex-direction: column;
 
     }
+
+    .location iframe {
+        width: 600px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -1573,6 +1585,10 @@ strong {
 
     .section {
         width: 80%;
+    }
+
+    .location iframe {
+        width: 400px;
     }
 }
 
