--- a/public/style.css
+++ b/public/style.css
@@ -1623,6 +1623,11 @@ strong {
     margin-bottom: 20px;
 }
 
+
+.donation-form .highlight{
+    background-color: #FFCCCC;
+}
+
 .donationdiv {
     display: flex;
     justify-content: start;
@@ -1631,13 +1636,6 @@ strong {
     padding: 0;
     margin-top: 30px;
 }
-
-
-
-
-
-
-
 
 
 
