--- a/public/style.css
+++ b/public/style.css
@@ -269,6 +269,7 @@ nav {
 h1 {
     font-size: 2.5rem;
     line-height: 3rem;
+    font-weight: bold;
     margin-bottom: 1rem;
 }
 
@@ -306,7 +307,7 @@ h1 {
     padding: 2rem;
     padding-top: 4rem;
     /* background-color: var(--primary-color); */
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/groepsfoto.jpg");
+    background: linear-gradient(rgba(29, 29, 29, 0.97), rgba(0, 0, 0, 0.5)), url("/images/groepsfoto.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: scroll;
@@ -322,7 +323,7 @@ h1 {
     max-width: 1200px;
     background-color: #fff;
     padding: 2rem;
-    border-radius: 5px;
+    border-radius: 15px;
 }
 
 .hero.text {
@@ -334,7 +335,7 @@ h1 {
 .hero img {
     width: 100%;
     max-width: 500px;
-    border-radius: 5px;
+    border-radius: 15px;
 }
 
 /* Gordijn */
@@ -441,7 +442,7 @@ h1 {
     max-width: 100%;
     height: 100%;
     padding: 2rem;
-    backdrop-filter: blur(5px) brightness(0.5);
+    backdrop-filter: blur(5px) brightness(0.2);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
@@ -1563,8 +1564,6 @@ strong {
     width: 50%;
     height: 100px;
     background-color: var(--secondary-color);
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
     border: none;
     font-size: 2rem;
     font-family: "Arial", sans-serif;
