--- a/public/style.css
+++ b/public/style.css
@@ -545,6 +545,11 @@ h1 {
 
 .photo-item img {
     width: 100%;
+    transition: transform 0.15s ease-in-out;
+}
+
+.photo-item:hover img {
+    transform: scale(1.1);
 }
 
 .photo-item h2 {
@@ -715,8 +720,10 @@ h1 {
 
 .posts {
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     gap: 1rem 4rem;
     padding: 1rem;
     min-height: 60svh;
@@ -738,7 +745,7 @@ h1 {
     left: 50%;
     transform: translateX(-50%);
     font-size: 1rem;
-    color: var(--primary-foreground-color);
+    color: #fff;
 
 }
 
@@ -750,30 +757,6 @@ h1 {
     height: calc(50% - 1px);
     background-color: var(--primary-color);
     content: ' ';
-}
-
-.post:nth-child(odd)::before {
-    position: absolute;
-    top: 50%;
-    left: -2rem;
-    width: 2rem;
-    height: 1px;
-    background-color: var(--primary-foreground-color);
-    content: '';
-}
-
-.post:nth-child(even)::after {
-    position: absolute;
-    top: 50%;
-    right: -2rem;
-    width: 2rem;
-    height: 1px;
-    background-color: var(--primary-foreground-color);
-    content: '';
-}
-
-.post:nth-child(odd) {
-    margin-top:4rem;
 }
 
 .post {
@@ -804,6 +787,12 @@ h1 {
     font-size: .75rem;
     line-height: 1rem;
     margin-bottom: 1rem;
+}
+
+.post-content p img {
+    width: 100%;
+    max-width: 100%;
+    border-radius: 5px;
 }
 
 /* Buttons */
@@ -1093,7 +1082,17 @@ textarea {
 
 .member-card:nth-child(even) {
     flex-direction: row;
+    transform: translateX(-6rem);
 }
+
+.member-card img {
+    transition: transform 0.15s ease-in-out;
+}
+
+.member-card:hover img {
+    transform: scale(1.1);
+}
+
 
 .member {
     display: flex;
@@ -1481,8 +1480,12 @@ div.fc-event-main {
     display: none;
 }
 
-.category-group[data-open = "false"] h2::after {
+.category-group[data-open = "true"] h2::after {
     content: "▼";
+}
+
+.category-group[data-open = "false"] h2::after {
+    content: "▲";
 }
 
 strong {
@@ -1679,6 +1682,12 @@ strong {
     .posts {
         grid-template-columns: 1fr;
     }
+
+    
+    .member-card:nth-child(even), .member-card:nth-child(odd) {
+        transform: translateX(0);
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 1024px) {
@@ -1696,6 +1705,10 @@ strong {
     .contact-split {
         flex-direction: column;
 
+    }
+
+    .location iframe {
+        width: 600px;
     }
 }
 
@@ -1741,6 +1754,10 @@ strong {
     .section {
         width: 80%;
     }
+
+    .location iframe {
+        width: 400px;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -1769,4 +1786,30 @@ strong {
     .contact-form {
         min-width: 300px;
     }
+}
+
+
+.cookies {
+    position: fixed;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: #000;
+    color: #fff;
+    bottom: 1rem;
+    left: 1rem;
+    border-radius: 5px;
+    right: 1rem;
+    z-index: 100;
+}
+
+.location iframe {
+    border: none;
+    border-radius: 5px;
+    width: 1000px;
+    max-width: 1200px;
+  height: 800px;
 }
