--- a/public/style.css
+++ b/public/style.css
@@ -771,6 +771,7 @@ h1 {
     border-radius: 5px;
     box-shadow: #1d1d1b 0px 0px 10px;
     max-height: 30rem;
+    width: 100%;
 }
 
 .post-content {
